# Autonomous-ws

./: .gitignore  .gitmodules  README.md
dev/: common_stereo.yaml  todo.md  zed2i.yaml
interfaces-ws/: README.md
interfaces-ws/rover_messages/: CMakeLists.txt  package.xml
interfaces-ws/rover_messages/include/rover_messages/: Enums.hpp
interfaces-ws/rover_messages/msg/: AutonDrive.msg  DriveMoveCmd.msg  DriveOpCmd.msg  DriveState.msg
navigation-ws/: README.md
navigation-ws/src/autonomous_costmap/: package.xml  setup.cfg  setup.py
navigation-ws/src/autonomous_costmap/autonomous_costmap/: map_diagnostic.py  pcd_to_height_costmap.py
navigation-ws/src/autonomous_costmap/config/: costmap_params.yaml
navigation-ws/src/autonomous_costmap/launch/: costmap.launch.py
navigation-ws/src/autonomous_costmap/resource/: autonomous_costmap
navigation-ws/src/autonomous_waypoint/: CMakeLists.txt  package.xml
navigation-ws/src/autonomous_waypoint-v1/: CMakeLists.txt  package.xml
navigation-ws/src/autonomous_waypoint-v1/launch/: waypoint.launch.py
navigation-ws/src/autonomous_waypoint-v1/src/: queue_waypoint.cpp  waypoint_node.cpp
navigation-ws/src/autonomous_waypoint/config/: params.yaml
navigation-ws/src/autonomous_waypoint/launch/: waypoint.launch.py
navigation-ws/src/autonomous_waypoint/src/: waypoint_node.cpp
navigation-ws/src/driver_pkg/: CMakeLists.txt  package.xml
navigation-ws/src/driver_pkg/config/: params.yaml
navigation-ws/src/driver_pkg/launch/: goal_driver.launch.py
navigation-ws/src/driver_pkg/src/: goal_driver.cpp  goal_driver_node.cpp
simulation-ws/: README.Md
simulation-ws/simulation_launch/: CMakeLists.txt  package.xml
simulation-ws/simulation_launch/gazebo/my_hill/: model.config  model.sdf
simulation-ws/simulation_launch/gazebo/my_hill/meshes/: Untitled.stl
simulation-ws/simulation_launch/launch/: gazebo_no_rviz.launch.py
simulation-ws/simulation_launch/rviz/: rover_view.rviz
simulation-ws/simulation_launch/simulation_launch/: zed_mimic_converter.py
simulation-ws/simulation_launch/src/: sim_bridge.cpp
simulation-ws/simulation_launch/urdf/: rover.urdf.xacro
simulation-ws/simulation_launch/worlds/: test_world.world  test_world2.world
