<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_launch</name>
  <version>0.1.0</version>
  <description>Gazebo simulation and visualization for rover with spinning LiDAR</description>
  <maintainer email="acid@todo.todo">acid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rover_messages</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- 3d styff -->
    <gazebo_ros gazebo_model_path="${prefix}/gazebo"/>
  </export>
</package>