<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_waypoint</name>
  <version>0.1.0</version>
  <description>Example</description>
  <maintainer email="acid@todo.todo">acid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rover_messages</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rtabmap_msgs</depend>
  <depend>phoenix6</depend>  

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>